--- a/index.html
+++ b/index.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+  <head class="header">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <title>Оно тебе надо</title>
+    <link rel="stylesheet" href="./fonts/fonts.css"/>
+    <link rel="stylesheet" href="./styles/global.css"/>
+    <link rel="stylesheet" href="./styles/style.css"/>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header-menu">
+        <ul class="header_links-list">
+          <li class="header__links-list-item header__links-list-item-no-bullit">
+            <a class="header_link header_link-active">Главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header_link" href="#0">Посмотреть лоты</a>
+          </li>
+          <li class="header_links-list-item">
+            <a class="header-link" href="#0">Об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header_logo">
+        <img class="header_logo-image"
+        src="./images/logo-black.svg"
+        alt="Логотип"
+        >
+      </a>
+      <address class="address">
+        <a href="tel:+99995555555">+9(999)555-55-55</a>
+        <a href="info@sobaka.ge">info@sobaka.ge</a>
+
+      </address>
+    </header>
+
+  
+    <footer class="footer">
+
+    </footer>
+  </body>
 </html>
