--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо</title>
+    <title>Оно тебе надо - аукцион вещей, в которые никто не верил</title>
     <link rel="stylesheet" href="./fonts/fonts.css"/>
     <link rel="stylesheet" href="./styles/global.css"/>
     <link rel="stylesheet" href="./styles/style.css"/>
   </head>
   <body>
     <header class="header">
+      <div class="header_container">
       <nav class="header-menu">
         <ul class="header_links-list">
-          <li class="header__links-list-item header__links-list-item-no-bullit">
-            <a class="header_link header_link-active">Главная</a>
+          <li class="header__links-list-item-no-bullit">
+            <a class="header_link-active">Главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header_link" href="#0">Посмотреть лоты</a>
           </li>
-          <li class="header_links-list-item">
-            <a class="header-link" href="#0">Об аукционе</a>
+          <li class="header__links-list-item">
+            <a class="header_link" href="#0">Об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -30,15 +31,139 @@
         alt="Логотип"
         >
       </a>
-      <address class="address">
-        <a href="tel:+99995555555">+9(999)555-55-55</a>
-        <a href="info@sobaka.ge">info@sobaka.ge</a>
-
+      <address class="header_address">
+        <a  href="tel:+99995555555">+9 999 555 5555</a>
+        <br/> <a  href="info@sobaka.ge">info@sobaka.ge</a>
+        <br/>  наб. Принсенграхт 263-265,> <br/>
+        Амстердам
       </address>
+    </div>
     </header>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="cover_title">
+          <span class="aligned-text">О</span>
+          <span class="aligned-text letter-spacing-extended">НО</span>
+          <span class="aligned-text aligned-text_center">ТЕ</span>
+          <span class="aligned-text_center letter-spacing-extended">БЕ</span>
+          <span class="aligned-text_right letter-spacing-extended">Н</span>
+          <span class="aligned-text_right no-letter-spacing">АДО</span>
+        </h1>
+        <section class="cover__description">
+         <h3 class="cover__description-text">Аукцион вещей, в которые никто не верил</h3>
+        <button class="bet-button">Сделать ставку</button>
+      </section>
+      </section>
+    </main>
 
-  
+    <section class="lots">
+      <h2 class="lots__heading">Лоты</h2>
+      <ul class="lots__card-list">
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#">
+            <article class="card card_type_film">
+              <div class="overlay"></div>
+              <h4 class="card__title">Фильм режиссёра, который бросил киношколу</h4>
+              <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка,
+                 если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+              </p>
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#">
+            <article class="card card_type_book">
+              <div class="overlay"></div> 
+              <h4 class="card__title">Книга, где описан один скучный 
+                день из жизни рекламного агента</h4>
+              <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания
+                 и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 
+                 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается
+                  на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#">
+            <article class="card card_type_picture">
+             <div class="overlay"></div> 
+             <h4 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h4>
+             <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
+               Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+            </article>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <section class="about">
+      <div class="container_logo">
+    <a class="about_logo">
+      <img class="about_logo-image"
+      src="./images/logo-white.svg"
+      alt="Логотип Оно тебе надо"
+      >
+    </a>
+       </div>
+     <h2 class="about_title">Об аукционе</h2>
+      <p class="Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. 
+      Наши лоты вообще не должны были попасть ни на один аукцион. 
+      Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, 
+      созданные любителями?"></p>
+      <p class="Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. 
+      Непринятые и непонятые. Когда-то они казались просто неудачными. 
+      Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. 
+      Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.">
+      </p>
+
+
+     </section>
     <footer class="footer">
+      <address class="footer_address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <br/> <a href="info@sobaka.ge">info@sobaka.ge</a>
+        <br/> наб. Принсенграхт 263-265,<br/>
+        Амстердам
+      </address>
+      <nav class="footer_menu">
+        <ul class="footer_menu-list">
+          <li class="footer__menu-list-item">
+            <a class="footer_menu-link_active">Главная</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer_menu-link" href="#0">Посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer_menu-link" href="#0">Об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
+            <img class="footer__social-icon"
+            src="./images/yt.svg"
+            alt="Youtube"
+           >
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
+            <img class="footer__social-icon"
+            src="./images/vk.svg"
+            alt="ВК"
+            >
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link">
+            <img class="footer__social-icon"
+            src="./images/pinterest.svg"
+            alt="Pinterest"
+            >
+          </a>
+        </li>
+      </ul>
 
     </footer>
   </body>
