--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head class="header">
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Оно тебе надо - аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css"/>
-    <link rel="stylesheet" href="./styles/global.css"/>
-    <link rel="stylesheet" href="./styles/style.css"/>
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
     <header class="header">
@@ -31,38 +31,46 @@
         alt="Логотип"
         >
       </a>
-      <address class="header_address">
-        <a  href="tel:+99995555555">+9 999 555 5555</a>
-        <br/> <a  href="info@sobaka.ge">info@sobaka.ge</a>
-        <br/>  наб. Принсенграхт 263-265,> <br/>
-        Амстердам
+      <address class="address">
+        <a  href="tel:+99995555555">+9 999 555 5555</a><br> 
+        <a  href="info@sobaka.ge">info@sobaka.ge</a><br>
+        <p>наб. Принсенграхт 263-265,<br>
+        Амстердам</p>
       </address>
     </div>
-    </header>
+  </header>
     <main>
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover_title">
-          <span class="aligned-text">О</span>
-          <span class="aligned-text letter-spacing-extended">НО</span>
-          <span class="aligned-text aligned-text_center">ТЕ</span>
-          <span class="aligned-text_center letter-spacing-extended">БЕ</span>
-          <span class="aligned-text_right letter-spacing-extended">Н</span>
-          <span class="aligned-text_right no-letter-spacing">АДО</span>
+          <span class="aligned-text aligned-text_left">О
+          <span class="letter-spacing-extended">НО
+          </span>
+        </span>
+          <span class="aligned-text aligned-text_center">Т
+            <span class="aligned-text_center">Е
+          <span class="letter-spacing-extended">БЕ
+          </span>
+        </span>
+      </span>
+          <span class="aligned-text aligned-text_right no-letter-spacing">Н
+          <span class="aligned-text_right no-letter-spacing ">АДО
+            </span>
+            </span>
         </h1>
-        <section class="cover__description">
-         <h3 class="cover__description-text">Аукцион вещей, в которые никто не верил</h3>
+        <div class="cover__description">
+         <h3 class="cover__description-text">Аукцион    вещей,    в    которые    никто    не     верил
+         </h3>
         <button class="bet-button">Сделать ставку</button>
-      </section>
-      </section>
+      </div>
+    </section>
     </main>
-
     <section class="lots">
       <h2 class="lots__heading">Лоты</h2>
       <ul class="lots__card-list">
         <li class="lots__card-list-item">
           <a class="card-link" href="#">
-            <article class="card card_type_film">
+            <article class="card_type_film">
               <div class="overlay"></div>
               <h4 class="card__title">Фильм режиссёра, который бросил киношколу</h4>
               <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка,
@@ -73,8 +81,8 @@
         </li>
         <li class="lots__card-list-item">
           <a class="card-link" href="#">
-            <article class="card card_type_book">
-              <div class="overlay"></div> 
+            <article class="card_type_book">
+              <div class="overlay"></div>
               <h4 class="card__title">Книга, где описан один скучный 
                 день из жизни рекламного агента</h4>
               <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания
@@ -86,8 +94,8 @@
         </li>
         <li class="lots__card-list-item">
           <a class="card-link" href="#">
-            <article class="card card_type_picture">
-             <div class="overlay"></div> 
+            <article class="card_type_picture">
+              <div class="overlay"></div>
              <h4 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h4>
              <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
                Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
@@ -95,9 +103,11 @@
           </a>
         </li>
       </ul>
+      <a class="lots__look-more-link" href="#">посмотреть больше
+      </a>
     </section>
     <section class="about">
-      <div class="container_logo">
+      <div class="logo">
     <a class="about_logo">
       <img class="about_logo-image"
       src="./images/logo-white.svg"
@@ -105,25 +115,25 @@
       >
     </a>
        </div>
-     <h2 class="about_title">Об аукционе</h2>
-      <p class="Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. 
-      Наши лоты вообще не должны были попасть ни на один аукцион. 
-      Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, 
-      созданные любителями?"></p>
-      <p class="Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. 
-      Непринятые и непонятые. Когда-то они казались просто неудачными. 
-      Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. 
-      Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.">
-      </p>
-
-
+       <div class="container_about">
+        <h2 class="about__title">Об аукционе</h2>
+        <div class="container_about__text">
+         <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+         </p>
+         <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+         </p>
+       </div>
+       </div>
      </section>
     <footer class="footer">
-      <address class="footer_address">
-        <a href="tel:+99995555555">+9 999 555 5555</a>
-        <br/> <a href="info@sobaka.ge">info@sobaka.ge</a>
-        <br/> наб. Принсенграхт 263-265,<br/>
+      <address class="address">
+        <a  href="tel:+99995555555">+9 999 555 5555
+        </a><br> 
+        <a href="info@sobaka.ge">info@sobaka.ge
+        </a><br> 
+        <p>наб. Принсенграхт 263-265,<br>
         Амстердам
+      </p>
       </address>
       <nav class="footer_menu">
         <ul class="footer_menu-list">
@@ -164,7 +174,6 @@
           </a>
         </li>
       </ul>
-
     </footer>
   </body>
 </html>
