Внесены правки после проверки автотестов

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         alt="Логотип"
         >
       </a>
-      <address class="address">
-        <a  href="tel:+99995555555">+9 999 555 5555</a><br> 
-        <a  href="info@sobaka.ge">info@sobaka.ge</a><br>
+      <address class="header_address">
+        <a class="address" href="tel:+99995555555">+9 999 555 5555</a><br> 
+        <a class="address" href="info@sobaka.ge">info@sobaka.ge</a><br>
         <p>наб. Принсенграхт 263-265,<br>
         Амстердам</p>
       </address>
@@ -126,10 +126,10 @@
        </div>
      </section>
     <footer class="footer">
-      <address class="address">
-        <a  href="tel:+99995555555">+9 999 555 5555
+      <address class="footer_address">
+        <a class="adress" href="tel:+99995555555">+9 999 555 5555
         </a><br> 
-        <a href="info@sobaka.ge">info@sobaka.ge
+        <a class="adress" href="info@sobaka.ge">info@sobaka.ge
         </a><br> 
         <p>наб. Принсенграхт 263-265,<br>
         Амстердам
