--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
      </section>
     <footer class="footer">
       <address class="footer_address">
-        <a class="adress" href="tel:+99995555555">+9 999 555 5555
+        <a class="address" href="tel:+99995555555">+9 999 555 5555
         </a><br> 
-        <a class="adress" href="info@sobaka.ge">info@sobaka.ge
+        <a class="address" href="info@sobaka.ge">info@sobaka.ge
         </a><br> 
         <p>наб. Принсенграхт 263-265,<br>
         Амстердам
