--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         >
       </a>
       <address class="header_address">
-        <a class="address" href="tel:+99995555555">+9 999 555 5555</a><br> 
-        <a class="address" href="info@sobaka.ge">info@sobaka.ge</a><br>
+        <a href="tel:+99995555555">+9 999 555 5555</a><br> 
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
         <p>наб. Принсенграхт 263-265,<br>
         Амстердам</p>
       </address>
@@ -127,9 +127,9 @@
      </section>
     <footer class="footer">
       <address class="footer_address">
-        <a class="address" href="tel:+99995555555">+9 999 555 5555
+        <a href="tel:+99995555555">+9 999 555 5555
         </a><br> 
-        <a class="address" href="info@sobaka.ge">info@sobaka.ge
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge
         </a><br> 
         <p>наб. Принсенграхт 263-265,<br>
         Амстердам
