--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     </head>
     <body>
         <header class="header">
-          <div class="header_container">
                 <nav class="header-menu">
                     <ul class="header_links-list">
                         <li class="header__links-list-item-no-bullit">
@@ -33,26 +32,25 @@
                     <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
                     <p class="address-text">наб. Принсенграхт 263-265, Амстердам</p>
                 </address>
-              </div>
         </header>
         <main>
             <section class="cover">
                 <div class="overlay"></div>
                 <h1 class="cover_title">
                     <span class="aligned-text">
-                        О
-                        <span class="letter-spacing-extended">НО </span>
+                        о
+                        <span class="letter-spacing-extended">но </span>
                     </span>
                     <span class="aligned-text aligned-text_center">
-                        Т
+                        т
                         <span class="aligned-text_center">
-                            Е
-                            <span class="letter-spacing-extended">БЕ </span>
+                            е
+                            <span class="letter-spacing-extended">бе </span>
                         </span>
                     </span>
                     <span class="aligned-text aligned-text_right no-letter-spacing">
-                        Н
-                        <span class="aligned-text_right no-letter-spacing">АДО </span>
+                        н
+                        <span class="aligned-text_right no-letter-spacing">адо </span>
                     </span>
                 </h1>
                 <div class="cover__description">
@@ -65,7 +63,7 @@
                 <ul class="lots__card-list">
                     <li class="lots__card-list-item">
                         <a class="card-link" href="#">
-                            <article class="card_type_film">
+                            <article class="card_type_film card">
                                 <div class="overlay"></div>
                                 <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
                                 <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
@@ -74,7 +72,7 @@
                     </li>
                     <li class="lots__card-list-item">
                         <a class="card-link" href="#">
-                            <article class="card_type_book">
+                            <article class="card_type_book card">
                                 <div class="overlay"></div>
                                 <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
                                 <p class="card__text">
@@ -86,7 +84,7 @@
                     </li>
                     <li class="lots__card-list-item">
                         <a class="card-link" href="#">
-                            <article class="card_type_picture">
+                            <article class="card_type_picture card">
                                 <div class="overlay"></div>
                                 <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
                                 <p class="card__text">
