Финальный вариант HTML 06.12

--- a/index.html
+++ b/index.html
@@ -11,47 +11,35 @@
     </head>
     <body>
         <header class="header">
-                <nav class="header-menu">
-                    <ul class="header_links-list">
-                        <li class="header__links-list-item-no-bullit">
-                            <a class="header__link header_link-active">Главная</a>
-                        </li>
-                        <li class="header__links-list-item">
-                            <a class="header_link" href="#0">Посмотреть лоты</a>
-                        </li>
-                        <li class="header__links-list-item">
-                            <a class="header_link" href="#0">Об аукционе</a>
-                        </li>
-                    </ul>
-                </nav>
-                <a class="header_logo">
-                    <img class="header_logo-image" src="./images/logo-black.svg" alt="Логотип" />
-                </a>
-                <address class="address">
-                    <a href="tel:+99995555555">+9 999 555 5555</a><br>
-                    <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-                    <p class="address-text">наб. Принсенграхт 263-265, Амстердам</p>
-                </address>
+            <nav class="header-menu">
+                <ul class="header_links-list">
+                    <li class="header__links-list-item-no-bullit">
+                        <a class="header__link header_link-active">Главная</a>
+                    </li>
+                    <li class="header__links-list-item">
+                        <a class="header_link" href="#0">Посмотреть лоты</a>
+                    </li>
+                    <li class="header__links-list-item">
+                        <a class="header_link" href="#0">Об аукционе</a>
+                    </li>
+                </ul>
+            </nav>
+            <a class="header_logo">
+                <img class="header_logo-image" src="./images/logo-black.svg" alt="Логотип" />
+            </a>
+            <address class="address">
+                <a href="tel:+99995555555">+9 999 555 5555</a><br />
+                <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+                <p class="address-text">наб. Принсенграхт 263-265, Амстердам</p>
+            </address>
         </header>
         <main>
             <section class="cover">
                 <div class="overlay"></div>
                 <h1 class="cover_title">
-                    <span class="aligned-text">
-                        о
-                        <span class="letter-spacing-extended">но </span>
-                    </span>
-                    <span class="aligned-text aligned-text_center">
-                        т
-                        <span class="aligned-text_center">
-                            е
-                            <span class="letter-spacing-extended">бе </span>
-                        </span>
-                    </span>
-                    <span class="aligned-text aligned-text_right no-letter-spacing">
-                        н
-                        <span class="aligned-text_right no-letter-spacing">адо </span>
-                    </span>
+                    <span class="aligned-text">о<span class="letter-spacing-extended">но</span> </span>
+                    <span class="aligned-text aligned-text_center"> те<span class="letter-spacing-extended">бе</span> </span>
+                    <span class="aligned-text aligned-text_right"> <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span> </span>
                 </h1>
                 <div class="cover__description">
                     <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
@@ -120,7 +108,7 @@
         </main>
         <footer class="footer">
             <address class="address">
-                <a href="tel:+99995555555">+9 999 555 5555 </a><br>
+                <a href="tel:+99995555555">+9 999 555 5555 </a><br />
                 <a href="mailto:info@sobaka.ge">info@sobaka.ge </a>
                 <p class="address-text">наб. Принсенграхт 263-265, Амстердам</p>
             </address>
