Правки после второго ревью 08.12

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head class="header">
+    <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -38,8 +38,8 @@
                 <div class="overlay"></div>
                 <h1 class="cover_title">
                     <span class="aligned-text">о<span class="letter-spacing-extended">но</span> </span>
-                    <span class="aligned-text aligned-text_center"> те<span class="letter-spacing-extended">бе</span> </span>
-                    <span class="aligned-text aligned-text_right"> <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span> </span>
+                    <span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бе</span> </span>
+                    <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span> </span>
                 </h1>
                 <div class="cover__description">
                     <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
