--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Оно тебе надо - аукцион вещей, в которые никто не верил</title>
-        <link rel="stylesheet" href="./fonts/fonts.css" />
-        <link rel="stylesheet" href="./styles/global.css" />
-        <link rel="stylesheet" href="./styles/style.css" />
+        <link rel="stylesheet" href="./fonts/fonts.css">
+        <link rel="stylesheet" href="./styles/global.css">
+        <link rel="stylesheet" href="./styles/style.css">
     </head>
     <body>
         <header class="header">
@@ -25,10 +25,10 @@
                 </ul>
             </nav>
             <a class="header_logo">
-                <img class="header_logo-image" src="./images/logo-black.svg" alt="Логотип" />
+                <img class="header_logo-image" src="./images/logo-black.svg" alt="Логотип">
             </a>
             <address class="address">
-                <a href="tel:+99995555555">+9 999 555 5555</a><br />
+                <a href="tel:+99995555555">+9 999 555 5555</a><br>
                 <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
                 <p class="address-text">наб. Принсенграхт 263-265, Амстердам</p>
             </address>
@@ -88,7 +88,7 @@
             <section class="about">
                 <div class="logo">
                     <a class="about_logo">
-                        <img class="about_logo-image" src="./images/logo-white.svg" alt="Логотип Оно тебе надо" />
+                        <img class="about_logo-image" src="./images/logo-white.svg" alt="Логотип Оно тебе надо">
                     </a>
                 </div>
                 <div class="container_about">
@@ -108,7 +108,7 @@
         </main>
         <footer class="footer">
             <address class="address">
-                <a href="tel:+99995555555">+9 999 555 5555 </a><br />
+                <a href="tel:+99995555555">+9 999 555 5555 </a><br>
                 <a href="mailto:info@sobaka.ge">info@sobaka.ge </a>
                 <p class="address-text">наб. Принсенграхт 263-265, Амстердам</p>
             </address>
@@ -128,17 +128,17 @@
             <ul class="footer__social-list">
                 <li class="footer__social-list-item">
                     <a class="footer__social-link" href="#">
-                        <img class="footer__social-icon" src="./images/yt.svg" alt="Youtube" />
+                        <img class="footer__social-icon" src="./images/yt.svg" alt="Youtube">
                     </a>
                 </li>
                 <li class="footer__social-list-item">
                     <a class="footer__social-link" href="#">
-                        <img class="footer__social-icon" src="./images/vk.svg" alt="ВК" />
+                        <img class="footer__social-icon" src="./images/vk.svg" alt="ВК">
                     </a>
                 </li>
                 <li class="footer__social-list-item">
                     <a class="footer__social-link">
-                        <img class="footer__social-icon" src="./images/pinterest.svg" alt="Pinterest" />
+                        <img class="footer__social-icon" src="./images/pinterest.svg" alt="Pinterest">
                     </a>
                 </li>
             </ul>
